# QMidi

./: CMakeLists.txt
examples/: CMakeLists.txt  usage.cpp
examples/button/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: qmidiinterface.cpp
